<resources>
    <string name="app_name">Big Stars</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="todo">TODO</string>
    <string name="bigstars">Bigstars</string>
    <string name="sistem_absensi_dan_monitoring">Sistem Absensi dan Monitoring</string>
    <string name="wali_murid">Wali Murid</string>
    <string name="pengajar">Pengajar</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="bimbel_bigstars">Bimbel Bigstars</string>
    <string name="selamat_datang_administrasi_data">Selamat Datang Administrasi Data !</string>
    <string name="data_pengajar">Data Pengajar</string>
    <string name="data_murid">Data Murid</string>
    <string name="data_wali_murid">Data Wali Murid</string>
    <string name="data_mata_pelajaran">Data Mata Pelajaran</string>
    <string name="data_kelas_pertemuan">Data Kelas Pertemuan</string>
    <string name="lihat_pertemuan_aktif">Lihat Pertemuan Aktif</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="update">Update</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="nama_mata_pelajaran">Nama Mata Pelajaran</string>
    <string name="submit">Submit</string>
    <string name="nama_wali_murid">Nama Wali Murid</string>
    <string name="no_hp">No HP</string>
    <string name="alamat">Alamat</string>
    <string name="cancel">Cancel</string>
    <string name="nama_murid">Nama Murid</string>
    <string name="pilih">Pilih</string>
    <string name="nama_pengajar">Nama Pengajar</string>
    <string name="nama_pelajaran">Nama Pelajaran</string>
    <string name="hari">Hari</string>
    <string name="jam">Jam</string>
    <string name="mata_pelajaran">Mata Pelajaran</string>
    <string name="jadwal_hari">Jadwal Hari</string>
    <string name="jam_mulai">Mulai</string>
    <string name="to">-</string>
    <string name="jam_berakhir">Berakhir</string>
    <string name="harga_fee">Harga Fee</string>
    <string name="harga_spp">Harga SPP</string>
    <string name="status_tidak_dibagikan">Status : Tidak Dibagikan</string>
    <string name="lakukan_absensi">Lakukan Absensi</string>
    <string name="click_untuk_melakukan_absensi">Click Untuk Melakukan Absensi</string>
    <string name="pertemuan_yang_masih_berjalan">Pertemuan Yang Masih Berjalan</string>
    <string name="daftar_riwayat_pertemuan">Daftar Riwayat Pertemuan</string>
    <string name="klik_untuk_memulai_pertemuan">Klik Untuk Memulai Pertemuan !!</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_berakhir">Waktu Berakhir</string>
    <string name="pertemuan_belum_selesai">Pertemuan : Belum Selesai</string>
    <string name="konfirmasi_invalid">Konfirmasi : Invalid</string>
    <string name="batal">Batal</string>
    <string name="valid">Valid</string>
    <string name="invalid">Invalid</string>
    <string name="next">Next</string>
    <string name="ambil_lokasi_sekarang">Ambil Lokasi Sekarang</string>
    <string name="batalkan_pertemuan">Batalkan Pertemuan</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="deskripsi_pertemuan">Deskripsi Pertemuan</string>
    <string name="klik_untuk_mengakhiri_pertemuan">Klik Untuk Mengakhiri Pertemuan</string>
    <string name="pertemuan">Pertemuan :</string>
    <string name="total_pertemuan">Total Pertemuan</string>
    <string name="total_fee">Total FEE</string>
    <string name="bayar_fee">Pembayaran FEE</string>
    <string name="total_spp">Total Spp</string>
    <string name="murid">Murid :</string>
    <string name="riwayat_pembayaran_spp">Riwayat Pembayaran SPP</string>
    <string name="detail_tagihan_spp">Detail Tagihan SPP</string>
    <string name="daftar_kelas_pertemuan">Daftar Kelas Pertemuan</string>
    <string name="lihat_kelas_pertemuan">Lihat Kelas Pertemuan</string>
    <string name="detail_tagihan_fee">Detail Tagihan Fee</string>
    <string name="riwayat_pembayaran_fee">Riwayat Pembayaran Fee</string>
    <string name="fee_sekarang">Fee Sekarang</string>
    <string name="tagihan_spp_sekarang">Tagihan Spp Sekarang</string>
</resources>
