<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10sp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary2"
        app:cardCornerRadius="10sp"
        app:cardElevation="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8sp">

                <TextView
                    android:id="@+id/tv_nama_pelajaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_pelajaran"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_hari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hari"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_jam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jam"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="7"
                android:src="@drawable/ic_delete_forever"
                android:visibility="gone"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>